# pytorch-lightning

./: .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  setup.cfg
.azure-pipelines/: gpu-tests.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci_pkg-install.yml  events-nightly.yml
benchmarks/: test_basic_parity.py  test_sharded_parity.py
dockers/base-conda/: Dockerfile
docs/source/: conf.py
pl_examples/: __init__.py  bug_report_model.py  test_examples.py
pl_examples/basic_examples/: autoencoder.py  backbone_image_classifier.py  conv_sequential_example.py  dali_image_classifier.py  mnist_datamodule.py  profiler_example.py  simple_image_classifier.py
pl_examples/domain_templates/: generative_adversarial_net.py  reinforce_learn_Qnet.py  reinforce_learn_ppo.py  semantic_segmentation.py
pytorch_lightning/: __about__.py
pytorch_lightning/accelerators/: accelerator.py  gpu.py  tpu.py
pytorch_lightning/callbacks/: __init__.py  base.py  early_stopping.py  finetuning.py  gpu_stats_monitor.py  lr_monitor.py  model_checkpoint.py  prediction_writer.py  progress.py  pruning.py  quantization.py  stochastic_weight_avg.py
pytorch_lightning/core/: datamodule.py  grads.py  lightning.py  memory.py  optimizer.py  saving.py
pytorch_lightning/distributed/: dist.py
pytorch_lightning/loggers/: base.py  comet.py  csv_logs.py  mlflow.py  neptune.py  wandb.py  (+2 more)
requirements/: adjust_versions.py  base.txt  examples.txt  extra.txt  loggers.txt  strategies.txt
tests/: __init__.py  collect_env_details.py  conftest.py  special_tests.sh  test_profiler.py
(+202 files in other folders)
