[build-system]
requires = [
    "setuptools",
    "wheel",
]

[tool.isort]
known_first_party = [
    "benchmarks",
    "docs",
    "pl_examples",
    "pytorch_lightning",
    "tests",
]
profile = "black"
line_length = 120
force_sort_within_sections = false
order_by_type = false

[tool.black]
line-length = 120
skip-magic-trailing-comma = true
